--- a/index.html
+++ b/index.html
@@ -23,25 +23,33 @@
  <nav class="header-nav">
     <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
     <ul class="nav-list">
-        <li class="list-item"><a class="nav-link" href="./index.html">Studio</a></li>
-        <li class="list-item"><a class="nav-link" href="">Portfolio</a></li>
-        <li class="list-item"><a class="nav-link" href="">Contacts</a></li>
+        <li class="list-item">
+            <a class="nav-link" href="./index.html">Studio</a></li>
+        <li class="list-item">
+            <a class="nav-link" href="">Portfolio</a></li>
+        <li class="list-item">
+            <a class="nav-link" href="">Contacts</a></li>
     </ul>
  </nav>
  <address class="contacts">
     <ul class="contacts-list">
-        <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contacts-item">
+            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
  </address>
 </div>
 </header>
    <main>
     <section class="information">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button-title">Order Service </button>
+        <div class="container information-container">        
+            <h1 class="title">Effective Solutions for Your Business</h1>
+            <button type="button" class="button-title">Order Service </button>
+    </div>
     </section>
     <section>
+        <div class="container">
         <h2 class="caption">Benefits</h2>
         <ul class="caption-list">
             <li class="list-item">
@@ -61,8 +69,10 @@
                 <p class="text-subtitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
             </li>
         </ul>
-    </section>
+    </div>
+</section>
     <section class="team">
+        <div class="container">
         <h2 class="headline">Our Team</h2>
         <ul class="headline-list">
             <li class="headline-list-item">
@@ -86,8 +96,10 @@
                 <p class="headline-subtitle-text">UI Designer</p>
             </li>
         </ul>
-    </section>
+    </div>
+</section>
 <section>
+    <div class="container">
     <h2 class="subject">Our Portfolio</h2>
     <ul>
         <li>
@@ -121,11 +133,14 @@
                     <p class="subject-subtitle-text">Marketing</p>            
         </li>
     </ul>
+</div>
 </section>
    </main>
    <footer class="page-footer">
+    <div class="container">
     <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-   </footer>
+</div>
+</footer>
 </body>
 </html>
